:hammer: Add full CRUD for Hotel
